# ZaqroU

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_LICENSES  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/: TextEditor.cpp  TextEditor.h
res/: titles.xml
res/icons/: Zaqro U.icns
src/: constants.h  main.cpp
src/raim/: Raim.cpp  Raim.h
src/raim/ui/: NotificationManager.cpp  NotificationManager.h  RaimUI.cpp  RaimUI.h
src/raim/ui/style/: IRaimUI_Theme.cpp  IRaimUI_Theme.h  RaimUI_Theme.h
src/raim/ui/style/theme/: DarkTheme.cpp  DarkTheme.h  GrayScaleTheme.cpp  GrayScaleTheme.h  ImGuiTheme.cpp  ImGuiTheme.h  JavaTheme.cpp  JavaTheme.h  PinkTheme.cpp  PinkTheme.h  ZaqroTheme.cpp  ZaqroTheme.h
src/raim/ui/tab/: IRaimTab.cpp  IRaimTab.h  RaimTabManager.cpp  RaimTabManager.h
src/raim/ui/tab/impl/: AboutTab.cpp  AboutTab.h  DebugTab.cpp  DebugTab.h  LogsTab.cpp  LogsTab.h  MemoryEditorTab.cpp  MemoryEditorTab.h  MemoryTableView.cpp  MemoryTableView.h
src/raim/ui/tab/impl/codes/: CodesTab.cpp  CodesTab.h  CodesTab_CodeFrame.cpp  CodesTab_CodeFrameUI.cpp  CodesTab_CodePopup.cpp  CodesTab_CodeWindow.cpp  CodesTab_CodesFrame.cpp  CodesTab_CodesFrameUI.cpp  CodesTab_CodesTable.cpp  CodesTab_CommentFrame.cpp  CodesTab_ControlsFrame.cpp  CodesTab_UI.cpp  CodesTab_Update.cpp
src/raim/ui/tab/impl/codes/backend/: CodeEntry.h  CodeEntryManager.cpp  CodeEntryManager.h  CodeLoader.cpp  CodeLoader.h
src/raim/ui/tab/impl/settings/: ISetting.h  Setting.h  SettingsTab.cpp  SettingsTab.h
src/utils/: AsyncTask.h  Config.cpp  Config.h  DiscordRPC.cpp  DiscordRPC.h  StrUtils.cpp  StrUtils.h  TCPGecko.cpp  TCPGecko.h  TitleIdParser.cpp  TitleIdParser.h  common.cpp  common.h  downloader.cpp  downloader.h  fs.cpp  fs.h  imgui_utils.cpp  imgui_utils.h
src/utils/pretendo_clients/: PNASClient.h  types.h
src/utils/tcp_gecko/: TCPGecko.cpp  TCPGecko.h  byteorder.cpp  byteorder.h  commands.h
